Fix bug #50755 & Enable multiple rowsets [DOC]